--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Tatianita</title>
   </head>
   <body>
+    <div class="menuToggle"></div>
     <div class="sidebar">
       <ul>
         <li class="logo">
-          <a href="#"><div class="text">Tatianita</div>
-          </a>
+          <a href="#"><div class="text">Tatianita</div> </a>
         </li>
         <div class="menuList">
           <li>
@@ -52,7 +52,6 @@
         </div>
       </ul>
     </div>
-    <div class="menuToggle"></div>
 
     <!--icons script-->
     <script
