--- a/index.html
+++ b/index.html
@@ -53,6 +53,40 @@
       </ul>
     </div>
 
+    <div class="container">
+      <div class="title">
+        <h1>A la Minions!</h1>
+      </div>
+      <div class="content">
+        <div class="image">
+          <img src="./img/sigmund-Fa9b57hffnM-unsplash.jpg" alt="image-dev" />
+        </div>
+        <div class="textsc">
+          Como ya te habrás dado cuenta, aun sigo en peleando con el diseño,
+          algun dia me saldra bien jajaja
+        </div>
+        <div class="textc">
+          El desarrollo web es uno de los proceso del desarrollo de software en
+          general, basicamente es la creacion de productos digitales en linea, y
+          bueno, es un proceso que se vuelve muy complejo dependiedo de los
+          gustos del cliente.
+        </div>
+        <div class="textc">
+          Este detalle es dedicado a usted! Es un sitio web "sencillo", yo lo
+          sé, pero se dice que los detalles mas sencillos son a veces los mas
+          bonitos.
+        </div>
+        <div class="textc">
+          Jajaja esperemos que este sea lo suficientemente bonito para que le
+          guste! A traves del menu podra explorar las siguientes secciones donde
+          he preparado algo para usted.
+        </div>
+        <div class="textc">
+          Asi que dejese llevar por un ratito que esto no la pondra incomoda.
+        </div>
+      </div>
+    </div>
+
     <!--icons script-->
     <script
       type="module"
